--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -61,3 +61,151 @@
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
+
+
+// ********** INIGRAL OVERRIDES: **********
+
+////// Font & Layout overrides:
+body {
+  font-family: 'Lucida Grande', 'Lucida Sans';
+  font-size:12px;
+}
+
+h2 { font-size: 18px; line-height:24px; }
+h3 { font-size: 16px; line-height:20px; }
+h4 {
+  font-size: 13px;
+  line-height:16px;
+  margin-bottom:10px;
+}
+h4 .icon-question-sign { margin-top:2px }
+
+////// What is this for?:
+.nav-tabs > li > a, .nav-pills > li > a {
+  padding: 6px 8px;
+}
+
+////// What is this for?
+.page-header .heading-btn { float:right; margin-left:5px; }
+
+////// Button overrides:
+.btn {
+  border-radius: 0 0 0 0;
+  font-weight:bold;
+}
+
+////// Form overrides:
+.control-group.warning {
+  .formFieldState(@yellow, @yellow, lighten(@yellow, 40%));
+}
+// Error
+.control-group.error {
+  .formFieldState(@red, @red, lighten(@red, 40%));
+}
+// Success
+.control-group.success {
+  .formFieldState(@green, @green, lighten(@green, 40%));
+}
+
+////// Label overrides:
+.label-success          { background-color: @green; }
+.label-success:hover    { background-color: darken(@green, 10%); }
+
+.label-info             { background-color: @blue; }
+.label-info:hover       { background-color: darken(@blue, 10%); }
+
+////// Badge overrides:
+.badge-success          { background-color: @green; }
+.badge-success:hover    { background-color: darken(@green, 10%); }
+
+.badge-info             { background-color: @blue; }
+.badge-info:hover       { background-color: darken(@blue, 10%); }
+
+
+////// Progress Bars:
+
+// Info (default) (teal)
+.progress-info .bar, .progress .bar {
+  #gradient > .vertical(@blue, @blueDark);
+}
+.progress-info.progress-striped .bar, .progress-striped .bar {
+  #gradient > .striped(@blue);
+}
+
+// Danger (red)
+.progress-danger .bar {
+  #gradient > .vertical(#ee5f5b, #c43c35);
+}
+.progress-danger.progress-striped .bar {
+  #gradient > .striped(#ee5f5b);
+}
+
+// Success (green)
+.progress-success .bar {
+  #gradient > .vertical(#62c462, #57a957);
+}
+.progress-success.progress-striped .bar {
+  #gradient > .striped(#62c462);
+}
+
+// Warning (orange)
+.progress-warning .bar {
+  #gradient > .vertical(lighten(@orange, 15%), @orange);
+}
+.progress-warning.progress-striped .bar {
+  #gradient > .striped(lighten(@orange, 15%));
+}
+
+////// Modal overrides:
+.modal-header {
+  margin: 20px 20px 0 20px;
+  padding: 0 0 10px;
+
+  border-bottom: 1px solid #999;
+  border-bottom: 1px solid rgba(0,0,0,.3);
+  *border-bottom: 1px solid #999; /* IE6-7 */
+
+  h4 {
+    font-weight: normal;
+    line-height: 1.3;
+    margin: 10px 0;
+  }
+}
+
+.modal-body {
+  padding: 15px 20px;
+  font-size: 13px;
+}
+
+.modal-footer { padding: 10px 20px 11px; }
+
+////// "Pager" overrides for pagination:
+.pager .disabled a, .pager .disabled a:hover {
+  color: #999;
+  background-color: white;
+  cursor: default;
+}
+
+.pager-wrapper {
+  @include clearfix();
+
+  float: right;
+  margin-top: 18px;
+
+  .pagination-numeration,
+  ul {
+    float: left;
+  }
+
+  .pagination-numeration {
+    font-weight: bold;
+    color: #999;
+    padding: 8px 0;
+    margin-right: 10px;
+  }
+}
+
+////// Reusable overrides:
+.no-margin {
+  margin: 0px;
+}
