--- a/less/variables.less
+++ b/less/variables.less
@@ -13,19 +13,19 @@
 @black:                 #000;
 @grayDarker:            #222;
 @grayDark:              #333;
-@gray:                  #555;
+@gray:                  #666;
 @grayLight:             #999;
-@grayLighter:           #eee;
+@grayLighter:           #e2e2e2;
 @white:                 #fff;
 
 
 // Accent colors
 // -------------------------
-@blue:                  #049cdb;
-@blueDark:              #0064cd;
-@green:                 #46a546;
-@red:                   #9d261d;
-@yellow:                #ffc40d;
+@blue:                  #627aad;
+@blueDark:              #3b5998;
+@green:                 #3B6E22;
+@red:                   #dd3c10;
+@yellow:                #e2c822;
 @orange:                #f89406;
 @pink:                  #c3325f;
 @purple:                #7a43b6;
@@ -39,7 +39,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
+@linkColor:             @blueDark;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -69,8 +69,8 @@
 @btnBackgroundHighlight:            darken(@white, 10%);
 @btnBorder:                         darken(@white, 20%);
 
-@btnPrimaryBackground:              @linkColor;
-@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 15%);
+@btnPrimaryBackground:              @blue;
+@btnPrimaryBackgroundHighlight:     @blueDark;
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
@@ -165,20 +165,20 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853;
-@warningBackground:       #fcf8e3;
+@warningText:             darken(@warningBackground, 60%);
+@warningBackground:       #F7F7F7;
 @warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
-@errorText:               #b94a48;
-@errorBackground:         #f2dede;
+@errorText:               darken(@errorBackground, 60%);
+@errorBackground:         #FFEBE8;
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #468847;
-@successBackground:       #dff0d8;
+@successText:             darken(@successBackground, 60%);
+@successBackground:       #ECEFF6;
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
-@infoText:                #3a87ad;
-@infoBackground:          #d9edf7;
+@infoText:                darken(spin(@infoBackground, -10), 60%);
+@infoBackground:          #FFF9D7;
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
 
